kubernetes/apps/keycloak/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    name: keycloak
    app.kubernetes.io/name: keycloak
